--- a/donate.html
+++ b/donate.html
@@ -21,26 +21,11 @@
         },
         extend: {
           colors: {
-            background: {
-              light: '#F9FAFB',
-              dark: '#0F172A',
-            },
-            text: {
-              light: '#111827',
-              dark: '#F8FAFC',
-            },
-            primary: {
-              light: '#3B82F6',
-              dark: '#60A5FA',
-            },
-            accent: {
-              light: '#6366F1',
-              dark: '#A5B4FC',
-            },
-            border: {
-              light: '#E5E7EB',
-              dark: '#334155',
-            }
+            background: { light: '#F9FAFB', dark: '#0F172A' },
+            text: { light: '#111827', dark: '#F8FAFC' },
+            primary: { light: '#3B82F6', dark: '#60A5FA' },
+            accent: { light: '#6366F1', dark: '#A5B4FC' },
+            border: { light: '#E5E7EB', dark: '#334155' }
           },
           boxShadow: {
             soft: '0 4px 24px 0 rgba(44,62,80,0.06)',
@@ -126,12 +111,10 @@
   <!-- Scripts -->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
-
-  <!-- 🔐 Load environment values (generated via generate-config.js) -->
   <script src="assets/env-config.js"></script>
   <script>
-    const RAZORPAY_KEY = window.ENV.RAZORPAY_KEY;
-    const GOOGLE_SCRIPT_URL = window.ENV.GOOGLE_SCRIPT_URL;
+    const GOOGLE_SCRIPT_URL = window.ENV?.GOOGLE_SCRIPT_URL;
+    const RAZORPAY_KEY = "rzp_test_abc123456789"; // ✅ Replace with your real Razorpay PUBLIC key
 
     function getAmount() {
       const params = new URLSearchParams(window.location.search);
@@ -141,7 +124,7 @@
     const amount = getAmount();
     document.getElementById('donation-amount').textContent = `₹${amount}`;
 
-    document.getElementById('pay-btn').addEventListener('click', function (e) {
+    document.getElementById('pay-btn').addEventListener('click', async function (e) {
       e.preventDefault();
 
       const name = document.getElementById("donor-name").value.trim();
@@ -152,23 +135,32 @@
         return;
       }
 
+      // Create Razorpay order via Vercel serverless function
+      const res = await fetch("/api/create-order", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ amount })
+      });
+
+      const data = await res.json();
+      const order = data.order;
+
       const options = {
         key: RAZORPAY_KEY,
-        amount: amount * 100,
-        currency: "INR",
+        amount: order.amount,
+        currency: order.currency,
         name: "daanPunya",
-        description: "Donation via daanPunya",
-        image: "https://yourdomain.com/logo.png", // Optional logo
+        description: "Donation",
+        order_id: order.id,
         prefill: { name, email },
         theme: { color: "#3B82F6" },
-
         handler: function (response) {
           const params = new URLSearchParams({
             name,
             email,
-            cause: "Donation via daanPunya",
             amount,
-            payment_id: response.razorpay_payment_id
+            payment_id: response.razorpay_payment_id,
+            order_id: response.razorpay_order_id
           });
 
           fetch(GOOGLE_SCRIPT_URL, {
@@ -177,11 +169,6 @@
             body: params.toString()
           })
           .then(() => {
-            window.location.href = "thankyou.html?payment_id=" + response.razorpay_payment_id;
-          })
-          .catch((err) => {
-            console.error("Logging failed:", err);
-            alert("Payment done but logging failed.");
             window.location.href = "thankyou.html?payment_id=" + response.razorpay_payment_id;
           });
         }
