--- a/donate.html
+++ b/donate.html
@@ -113,8 +113,8 @@
   <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
   <script src="assets/env-config.js"></script>
   <script>
-    const GOOGLE_SCRIPT_URL = window.ENV?.GOOGLE_SCRIPT_URL;
-    const RAZORPAY_KEY = "rzp_test_abc123456789"; // ✅ Replace with your real Razorpay PUBLIC key
+    const GOOGLE_SCRIPT_URL = window.ENV.RAZORPAY_KEY;
+    const RAZORPAY_KEY = window.ENV.GOOGLE_SCRIPT_URL; // ✅ Replace with your real Razorpay PUBLIC key
 
     function getAmount() {
       const params = new URLSearchParams(window.location.search);
